# financial

./: .env.example  .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml  spec.md  tasks.md
.codex/: config.toml
.codex/prompts/: analyst_system.md  earnings_review.md  initiation_note.md  valuation_memo.md
.github/: pull_request_template.md
config/: doc_type_aliases.yaml  metric_aliases.yaml  output_paths.yaml  period_rules.yaml  qa_thresholds.yaml  report_types.yaml  runtime_defaults.yaml  sources.yaml
docs/: expansion_criteria.md  mcp_natural_language_practice_plan.md  mcp_stdio_usage.md  mcp_tool_contracts.md  metric_alias_standard.md  nl_orchestration_plan.md  operations_metrics.md  providers.md  recovery.md  runbook.md  security_governance.md  step_1_진행내용.md  step_2_진행내용.md  step_3_진행내용.md  step_4_진행내용.md  step_5_진행내용.md  step_6_진행내용.md  v1_scope.md
docs/archive/: README.md
docs/playbooks/: build-report.md  refresh-comps.md  validate-sources.md
evals/datasets/: nl_questions_v1.json
evals/golden/: expected_answer_traits.json  expected_tool_plans.json
evals/reports/: nl_questions_v1_answers.json  nl_questions_v1_verification.json
examples/: expected_manifest.example.json  expected_source_map.example.json  report_input.example.json  review_pack.example.md
examples/mcp/: README.md  docs_gateway.search_documents.response.json  macro_data_gateway.get_latest_observation.response.json  market_data_gateway.get_price_snapshot.response.json
mcp/: __init__.py
mcp/common/: __init__.py  errors.py  (+3 more)
scripts/: run_nl_query_gateway.py
src/: __init__.py
(+65 files in other folders)
