[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-research-workbench"
version = "0.1.0"
description = "Financial research report workbench scaffold"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.7,<3",
  "polars>=1.0,<2",
  "duckdb>=1.0,<2",
  "beautifulsoup4>=4.14,<5",
  "jinja2>=3.1,<4",
  "pandera>=0.20,<1",
  "requests>=2.32,<3",
  "tenacity>=8.2,<9",
  "orjson>=3.10,<4",
  "yfinance>=0.2.54,<0.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "ruff>=0.5,<0.6",
  "mypy>=1.10,<2",
  "types-requests>=2.32,<3"
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "mcp", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["src", "mcp"]
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
